@@ -560,7 +560,7 @@
   <td><br></td>
   <td>
     <p>
-      <li>Add-on <a href="http://cxx.uclibc.org/">uClibc++</a> module provides Standard C++ Library(LGPL).</li>
+      <li>Add-on <a href="http://cxx.uclibc.org/">uClibc++</a> module provides Standard C++ Library (LGPL).</li>
     </p>
   </td>
 </tr>
